Gave logo font and fixed footer collapse

--- a/fle_site/static/css/styles.less
+++ b/fle_site/static/css/styles.less
@@ -58,6 +58,21 @@ a {
         border-top-color: @white;
         border-bottom-color: @white;
     } 
+    .fle-logo {
+        font-size: 20px;
+        letter-spacing: 1px;
+        font-family: @logo_font;
+        font-weight: 700;
+        .logo-font-thin {
+            font-weight: 100;
+        }
+        @media (max-width: 820px) {
+            font-size: 15px;
+        }
+        @media (max-width: 420px) {
+            font-size: 10px;
+        }
+    }
 }
 
 // --------------------
@@ -127,10 +142,10 @@ a {
   position: relative;
   padding-left: 0px;
   margin: 0px;
-  @media (min-width: 768px) {
-      top: -40px;
+  @media (min-width: 990px) {
+      top: -35px;
   }
-  @media (max-width: 767px) {
+  @media (max-width: 989px) {
       top: -20px
   }
 }
